[package]
name = "neat"
version = "0.0.1"
authors = ["Michael Neumann <mneumann@ntecs.de>"]
license = "MIT"
repository = "https://github.com/mneumann/neat-rs"
description = "NEAT - NeuroEvolution of Augmented Topologies"
keywords = ["evolution", "neuro", "net", "algorithm"]

include = ["src/*.rs", "Cargo.toml", "LICENSE", "README.md"]

[dependencies]

rand = "0.3"

[dev-dependencies]

graph-neighbor-matching = {git = "https://github.com/mneumann/graph-neighbor-matching.git"}
graph-io-gml = "0.0.2"
