[package]
name = "neat"
version = "0.0.1"
authors = ["Michael Neumann <mneumann@ntecs.de>"]
license = "MIT"
repository = "https://github.com/mneumann/neat-rs"
description = "NEAT - NeuroEvolution of Augmented Topologies"
keywords = ["evolution", "neuro", "net", "algorithm"]

include = ["src/*.rs", "examples/*.rs", "examples/*.gml", "Cargo.toml", "LICENSE", "README.md"]

[dependencies]

rand = "0.3"
rayon = { git = "https://github.com/nikomatsakis/rayon" }
fixedbitset = "0.1.0"
log = "0.3.5"

[dev-dependencies]

#graph-neighbor-matching = "0.4"
graph-neighbor-matching = {git = "https://github.com/mneumann/graph-neighbor-matching"}
graph-io-gml = "0.0.2"
closed01 = "0.3"
